update with no data value check

--- a/notebooks/challenge.ipynb
+++ b/notebooks/challenge.ipynb
@@ -156,6 +156,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "No data values: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# No data\n",
+    "rgb_tiff =\"data/processed/Sentinel2_visual_processed.tiff\"\n",
+    "src = rio.open(rgb_tiff)\n",
+    "logging.info(f\"No data values: {src.nodata}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Converting GeoTIFF to Cloud Optimised GeoTIFF... ⣟"
      ]
     },
@@ -194,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,9 +257,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Band_Metadata': {'Band 1': {'ColorInterp': 'gray',\n",
+      "                              'Description': None,\n",
+      "                              'Metadata': {},\n",
+      "                              'Offset': 0.0},\n",
+      "                   'Band 2': {'ColorInterp': 'undefined',\n",
+      "                              'Description': None,\n",
+      "                              'Metadata': {},\n",
+      "                              'Offset': 0.0},\n",
+      "                   'Band 3': {'ColorInterp': 'undefined',\n",
+      "                              'Description': None,\n",
+      "                              'Metadata': {},\n",
+      "                              'Offset': 0.0}},\n",
+      " 'COG': True,\n",
+      " 'COG_errors': None,\n",
+      " 'COG_warnings': None,\n",
+      " 'ColorSpace': None,\n",
+      " 'Compression': 'DEFLATE',\n",
+      " 'Driver': 'GTiff',\n",
+      " 'GEO': {'BoundingBox': [300000.0, 4690200.0, 409800.0, 4800000.0],\n",
+      "         'CRS': 'EPSG:32635',\n",
+      "         'MaxZoom': 13,\n",
+      "         'MinZoom': 7,\n",
+      "         'Origin': [300000.0, 4800000.0],\n",
+      "         'Resolution': [10.0, -10.0]},\n",
+      " 'IFD': {'Level_0': {'BlockSize': [512, 512],\n",
+      "                     'Decimation': 0,\n",
+      "                     'Height': 10980,\n",
+      "                     'Level': 0,\n",
+      "                     'Width': 10980},\n",
+      "         'Level_1': {'BlockSize': [512, 512],\n",
+      "                     'Decimation': 2,\n",
+      "                     'Height': 5490,\n",
+      "                     'Level': 1,\n",
+      "                     'Width': 5490},\n",
+      "         'Level_2': {'BlockSize': [512, 512],\n",
+      "                     'Decimation': 4,\n",
+      "                     'Height': 2745,\n",
+      "                     'Level': 2,\n",
+      "                     'Width': 2745},\n",
+      "         'Level_3': {'BlockSize': [512, 512],\n",
+      "                     'Decimation': 8,\n",
+      "                     'Height': 1373,\n",
+      "                     'Level': 3,\n",
+      "                     'Width': 1373},\n",
+      "         'Level_4': {'BlockSize': [512, 512],\n",
+      "                     'Decimation': 16,\n",
+      "                     'Height': 687,\n",
+      "                     'Level': 4,\n",
+      "                     'Width': 687},\n",
+      "         'Level_5': {'BlockSize': [512, 512],\n",
+      "                     'Decimation': 32,\n",
+      "                     'Height': 344,\n",
+      "                     'Level': 5,\n",
+      "                     'Width': 344}},\n",
+      " 'Profile': {'AlphaBand': False,\n",
+      "             'Bands': 3,\n",
+      "             'ColorInterp': ['gray', 'undefined', 'undefined'],\n",
+      "             'ColorMap': False,\n",
+      "             'Dtype': 'uint16',\n",
+      "             'Height': 10980,\n",
+      "             'Interleave': 'PIXEL',\n",
+      "             'InternalMask': False,\n",
+      "             'Nodata': None,\n",
+      "             'Offsets': [0.0, 0.0, 0.0],\n",
+      "             'Scales': [1.0, 1.0, 1.0],\n",
+      "             'Tiled': True,\n",
+      "             'Width': 10980},\n",
+      " 'Tags': {'Image Metadata': {'AREA_OR_POINT': 'Area',\n",
+      "                             'OVR_RESAMPLING_ALG': 'NEAREST'},\n",
+      "          'Image Structure': {'COMPRESSION': 'DEFLATE',\n",
+      "                              'INTERLEAVE': 'PIXEL',\n",
+      "                              'LAYOUT': 'COG'}}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Read COG metadata\n",
     "import json\n",
