--- a/notebooks/challenge.ipynb
+++ b/notebooks/challenge.ipynb
@@ -571,7 +571,7 @@
    ],
    "source": [
     "# Thumbnail and Overview image\n",
-    "from opencosmos.utils import sentinel_image_webp\n",
+    "from opencosmos.copernicus import sentinel_image_webp\n",
     "png_path = \"data/processed/Sentinel2_visual_processed.png\"\n",
     "rgb_plot=plt.imshow(rgb_composite_bn, interpolation='lanczos')\n",
     "plt.axis('off')\n",
