--- a/notebooks/challenge.ipynb
+++ b/notebooks/challenge.ipynb
@@ -42,29 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 18:50:34 - root - INFO - data/downloads/Copernicus_Data_Ecosystem appears to be empty!\u001b[0m\n",
-      "\u001b[32m2023-11-22 18:50:34 - root - INFO - Begin downloading\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:18:40 - root - INFO - data/downloads/Copernicus_Data_Ecosystem appears to be empty!\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:18:40 - root - INFO - Begin downloading\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 850M/850M [02:11<00:00, 6.45MiB/s]    "
+      "100%|██████████| 850M/850M [00:44<00:00, 19.2MiB/s]    "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 18:52:46 - root - INFO - Download finished\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:19:25 - root - INFO - Download finished\u001b[0m\n"
      ]
     },
     {
@@ -78,21 +78,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 18:52:56 - root - INFO - Begin extracting the zip file: data/downloads/Copernicus_Data_Ecosystem/42f56c90-9613-5271-9e28-44a968e11c7d.zip\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:19:35 - root - INFO - Begin extracting the zip file: data/downloads/Copernicus_Data_Ecosystem/42f56c90-9613-5271-9e28-44a968e11c7d.zip\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting: 100%|██████████| 116/116 [00:01<00:00, 112.77it/s]"
+      "Extracting: 100%|██████████| 116/116 [00:01<00:00, 71.72it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 18:52:57 - root - INFO - Extraction finished\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:19:37 - root - INFO - Extraction finished\u001b[0m\n"
      ]
     },
     {
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading RGB bands into a single file.... ⣻"
+      "Reading RGB bands into a single file.... ⣽"
      ]
     },
     {
@@ -129,7 +129,7 @@
      "output_type": "stream",
      "text": [
       "Well, that was fast                                                             \n",
-      "\u001b[32m2023-11-22 18:56:35 - root - INFO - Find the RGB processed image here: data/processed/Sentinel2_visual_processed.tiff\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:20:12 - root - INFO - Find the RGB processed image here: data/processed/Sentinel2_visual_processed.tiff\u001b[0m\n"
      ]
     }
    ],
@@ -149,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No data values: None\n"
+      "\u001b[32m2023-11-22 22:20:17 - root - INFO - No data values: None\u001b[0m\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/vrym/projects/opencosmos/OpenCosmos_Challenge/opencosmos/copernicus/cog.py:139: RasterioDeprecationWarning: Source dataset should be opened in read-only mode. Use of datasets opened in modes other than 'r' will be disallowed in a future version.\n",
+      "/home/vrym/projects/opencosmos/OpenCosmos_Challenge/opencosmos/copernicus/cog.py:147: RasterioDeprecationWarning: Source dataset should be opened in read-only mode. Use of datasets opened in modes other than 'r' will be disallowed in a future version.\n",
       "  cog_translate(\n"
      ]
     },
@@ -192,8 +192,8 @@
      "output_type": "stream",
      "text": [
       "That was fast                                                                   \n",
-      "\u001b[32m2023-11-22 19:08:18 - root - INFO - Find the converted COG file here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog.tiff\u001b[0m\n",
-      "\u001b[32m2023-11-22 19:08:18 - root - INFO - Find the COG meta data here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog_metadata.json\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:21:57 - root - INFO - Find the converted COG file here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog.tiff\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:21:57 - root - INFO - Find the COG meta data here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog_metadata.json\u001b[0m\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,26 +238,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CRS of the raster data: EPSG:32635\n"
+      "\u001b[32m2023-11-22 22:22:23 - root - INFO - CRS of the raster data: EPSG:32635\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "# Reading Raster image\n",
     "src = rio.open(cog_path, count = 3)\n",
-    "print(f\"CRS of the raster data: {src.crs}\")"
+    "logging.info(f\"CRS of the raster data: {src.crs}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,21 +420,21 @@
     "clipped_image = \"data/processed/Sentinel2_clipped_visual_processed.tiff\"\n",
     "\n",
     "with rio.open(clipped_image, \"w\", **out_meta) as final:\n",
-    "    final.write(out_image)\n"
+    "    final.write(out_image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7bcd7766d0>"
+       "<matplotlib.image.AxesImage at 0x7f928645fa90>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -467,16 +467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7bcd6a6490>"
+       "<matplotlib.image.AxesImage at 0x7f9286332c70>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -508,16 +508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7bcc59c580>"
+       "<matplotlib.image.AxesImage at 0x7f9285233f40>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -553,19 +553,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 19:28:58 - root - INFO - PNG file has been saved here:data/processed/Sentinel2_visual_processed.png\u001b[0m\n",
-      "\u001b[32m2023-11-22 19:28:58 - root - INFO - Size of the PNG file: 0.73 MB\u001b[0m\n",
-      "\u001b[32m2023-11-22 19:28:58 - root - INFO - PNG File shape: (484, 779)\u001b[0m\n",
-      "\u001b[32m2023-11-22 19:28:58 - root - INFO - File size of the converted webp format: 0.04 MB\u001b[0m\n",
-      "\u001b[32m2023-11-22 19:28:58 - root - INFO - WEBP File shape: (500, 500)\u001b[0m\n",
-      "\u001b[32m2023-11-22 19:28:58 - root - INFO - Find the converted file here: data/processed/Sentinel2_visual_processed.webp\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:23:35 - root - INFO - PNG file has been saved here:data/processed/Sentinel2_visual_processed.png\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:23:35 - root - INFO - Size of the PNG file: 0.73 MB\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:23:35 - root - INFO - PNG File shape: (484, 779)\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:23:35 - root - INFO - File size of the converted webp format: 0.04 MB\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:23:35 - root - INFO - WEBP File shape: (500, 500)\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:23:35 - root - INFO - Find the converted file here: data/processed/Sentinel2_visual_processed.webp\u001b[0m\n"
      ]
     }
    ],
