--- a/notebooks/challenge.ipynb
+++ b/notebooks/challenge.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,34 +37,36 @@
     "from opencosmos.utils import plot_image\n",
     "\n",
     "# config file\n",
-    "config.fileConfig(\"logger.ini\")"
+    "config.fileConfig(\"logger.ini\")\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:18:40 - root - INFO - data/downloads/Copernicus_Data_Ecosystem appears to be empty!\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:18:40 - root - INFO - Begin downloading\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:31:41 - root - INFO - data/downloads/Copernicus_Data_Ecosystem appears to be empty!\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:31:42 - root - INFO - Begin downloading\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 850M/850M [00:44<00:00, 19.2MiB/s]    "
+      "100%|██████████| 850M/850M [00:54<00:00, 15.6MiB/s]    "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:19:25 - root - INFO - Download finished\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:32:36 - root - INFO - Download finished\u001b[0m\n"
      ]
     },
     {
@@ -78,21 +80,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:19:35 - root - INFO - Begin extracting the zip file: data/downloads/Copernicus_Data_Ecosystem/42f56c90-9613-5271-9e28-44a968e11c7d.zip\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:32:46 - root - INFO - Begin extracting the zip file: data/downloads/Copernicus_Data_Ecosystem/42f56c90-9613-5271-9e28-44a968e11c7d.zip\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting: 100%|██████████| 116/116 [00:01<00:00, 71.72it/s]"
+      "Extracting: 100%|██████████| 116/116 [00:01<00:00, 115.18it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:19:37 - root - INFO - Extraction finished\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:32:47 - root - INFO - Extraction finished\u001b[0m\n"
      ]
     },
     {
@@ -114,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading RGB bands into a single file.... ⣽"
+      "Reading RGB bands into a single file.... ⣷"
      ]
     },
     {
@@ -129,7 +131,7 @@
      "output_type": "stream",
      "text": [
       "Well, that was fast                                                             \n",
-      "\u001b[32m2023-11-22 22:20:12 - root - INFO - Find the RGB processed image here: data/processed/Sentinel2_visual_processed.tiff\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:33:23 - root - INFO - Find the RGB processed image here: data/processed/Sentinel2_visual_processed.tiff\u001b[0m\n"
      ]
     }
    ],
@@ -149,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:20:17 - root - INFO - No data values: None\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:33:27 - root - INFO - No data values: None\u001b[0m\n"
      ]
     }
    ],
@@ -169,31 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting GeoTIFF to Cloud Optimised GeoTIFF... ⣟"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vrym/projects/opencosmos/OpenCosmos_Challenge/opencosmos/copernicus/cog.py:147: RasterioDeprecationWarning: Source dataset should be opened in read-only mode. Use of datasets opened in modes other than 'r' will be disallowed in a future version.\n",
-      "  cog_translate(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "That was fast                                                                   \n",
-      "\u001b[32m2023-11-22 22:21:57 - root - INFO - Find the converted COG file here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog.tiff\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:21:57 - root - INFO - Find the COG meta data here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog_metadata.json\u001b[0m\n"
+      "\u001b[32m2023-11-22 22:35:02 - root - INFO - Find the converted COG file here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog.tiff\u001b[0m\n",
+      "\u001b[32m2023-11-22 22:35:02 - root - INFO - Find the COG meta data here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog_metadata.json\u001b[0m\n"
      ]
     }
    ],
@@ -356,18 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vrym/mambaforge/envs/opencosmos/lib/python3.9/site-packages/pyproj/crs/crs.py:141: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "  in_crs_string = _prepare_from_proj_string(in_crs_string)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_bbox(center_lon, center_lat, distance)-> gpd.GeoDataFrame:\n",
     "  \"\"\"\n",
