--- a/notebooks/challenge.ipynb
+++ b/notebooks/challenge.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,29 +44,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:31:41 - root - INFO - data/downloads/Copernicus_Data_Ecosystem appears to be empty!\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:31:42 - root - INFO - Begin downloading\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:20:44 - root - INFO - URL for the search criteria: 'https://catalogue.dataspace.copernicus.eu/resto/api/collections/Sentinel2/search.json?productType=S2MSI1C&cloudCover=[0,10]&startDate=2022-01-01T00:00:00Z&completionDate=2022-03-31T23:59:59Z&maxRecords=10&box=24.5,42.5,25,43'\u001b[0m\n",
+      "\u001b[32m2023-11-23 11:20:45 - root - INFO - First Product ID of the search result: '9b0d7490-8a84-5083-a470-c4f73d7410c0'\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sentinel 2 Product\n",
+    "from opencosmos.copernicus import copernicus_api_search\n",
+    "\n",
+    "api = copernicus_api_search(log=logging)\n",
+    "url = api.construct_url()\n",
+    "logging.info(f\"URL for the search criteria: '{url}'\")\n",
+    "\n",
+    "# Getting the first product ID of the search result\n",
+    "df = api.search_results(url=url)\n",
+    "product_id = df[\"id\"].iloc[1]\n",
+    "logging.info(f\"First Product ID of the search result: '{product_id}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2023-11-23 11:21:58 - root - INFO - data/downloads/Copernicus_Data_Ecosystem appears to be empty!\u001b[0m\n",
+      "\u001b[32m2023-11-23 11:21:58 - root - INFO - Begin downloading\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 850M/850M [00:54<00:00, 15.6MiB/s]    "
+      "100%|██████████| 853M/853M [00:42<00:00, 20.2MiB/s]    "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:32:36 - root - INFO - Download finished\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:22:40 - root - INFO - Download finished\u001b[0m\n"
      ]
     },
     {
@@ -80,21 +108,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:32:46 - root - INFO - Begin extracting the zip file: data/downloads/Copernicus_Data_Ecosystem/42f56c90-9613-5271-9e28-44a968e11c7d.zip\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:22:50 - root - INFO - Begin extracting the zip file: data/downloads/Copernicus_Data_Ecosystem/9b0d7490-8a84-5083-a470-c4f73d7410c0.zip\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting: 100%|██████████| 116/116 [00:01<00:00, 115.18it/s]"
+      "Extracting: 100%|██████████| 78/78 [00:01<00:00, 65.32it/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:32:47 - root - INFO - Extraction finished\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:22:52 - root - INFO - Extraction finished\u001b[0m\n"
      ]
     },
     {
@@ -109,29 +137,63 @@
     "# Download Sentinel 2 image\n",
     "from opencosmos.copernicus import copernicus_data_download\n",
     "\n",
-    "product_id = \"42f56c90-9613-5271-9e28-44a968e11c7d\"\n",
+    "product_id = product_id\n",
     "download = copernicus_data_download(log = logging, product_id = product_id)\n",
     "download.commence()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading RGB bands into a single file.... ⣷"
+      "\u001b[32m2023-11-23 11:23:12 - root - INFO - Band files:\n",
+      "['T35TLH_20220120T091311_B05.jp2',\n",
+      " 'T35TLH_20220120T091311_B08.jp2',\n",
+      " 'T35TLH_20220120T091311_B12.jp2',\n",
+      " 'T35TLH_20220120T091311_B03.jp2',\n",
+      " 'T35TLH_20220120T091311_B11.jp2',\n",
+      " 'T35TLH_20220120T091311_B06.jp2',\n",
+      " 'T35TLH_20220120T091311_B07.jp2',\n",
+      " 'T35TLH_20220120T091311_B01.jp2',\n",
+      " 'T35TLH_20220120T091311_B8A.jp2',\n",
+      " 'T35TLH_20220120T091311_TCI.jp2',\n",
+      " 'T35TLH_20220120T091311_B09.jp2',\n",
+      " 'T35TLH_20220120T091311_B02.jp2',\n",
+      " 'T35TLH_20220120T091311_B10.jp2',\n",
+      " 'T35TLH_20220120T091311_B04.jp2']\u001b[0m\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Band data\n",
+    "from pprint import pformat\n",
+    "safe_file_path = \"data/downloads/Copernicus_Data_Ecosystem/S2A_MSIL1C_20220120T091311_N0301_R050_T35TLH_20220120T111422.SAFE\"\n",
+    "granule_data = os.path.join(safe_file_path, \"GRANULE\", \"L1C_T35TLH_A034367_20220120T091333\",\"IMG_DATA\")\n",
+    "try:\n",
+    "    assert os.path.exists(granule_data)\n",
+    "except AssertionError:\n",
+    "    logging.debug(\"SAFE file does not exist\")\n",
+    "else:\n",
+    "    bands = os.listdir(granule_data)\n",
+    "    logging.info(f\"Band files:\\n{pformat(bands)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Well, that was fast                                                             \n",
-      "\u001b[32m2023-11-22 22:33:23 - root - INFO - Find the RGB processed image here: data/processed/Sentinel2_visual_processed.tiff\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:24:22 - root - INFO - Find the RGB processed image here: data/processed/Sentinel2_visual_processed.tiff\u001b[0m\n"
      ]
     }
    ],
@@ -151,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:33:27 - root - INFO - No data values: None\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:24:45 - root - INFO - No data values: None\u001b[0m\n"
      ]
     }
    ],
@@ -171,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +241,8 @@
      "output_type": "stream",
      "text": [
       "That was fast                                                                   \n",
-      "\u001b[32m2023-11-22 22:35:02 - root - INFO - Find the converted COG file here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog.tiff\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:35:02 - root - INFO - Find the COG meta data here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog_metadata.json\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:27:05 - root - INFO - Find the converted COG file here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog.tiff\u001b[0m\n",
+      "\u001b[32m2023-11-23 11:27:05 - root - INFO - Find the COG meta data here: /home/vrym/projects/opencosmos/OpenCosmos_Challenge/notebooks/data/processed/Sentinel2_visual_processed_cog_metadata.json\u001b[0m\n"
      ]
     }
    ],
@@ -201,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -225,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:22:23 - root - INFO - CRS of the raster data: EPSG:32635\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:29:13 - root - INFO - CRS of the raster data: EPSG:32635\u001b[0m\n"
      ]
     }
    ],
@@ -244,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,16 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f928645fa90>"
+       "<matplotlib.image.AxesImage at 0x7f077af159d0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -445,16 +507,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f9286332c70>"
+       "<matplotlib.image.AxesImage at 0x7f077ae0c4c0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,16 +548,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f9285233f40>"
+       "<matplotlib.image.AxesImage at 0x7f077ad847f0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -531,19 +593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-22 22:23:35 - root - INFO - PNG file has been saved here:data/processed/Sentinel2_visual_processed.png\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:23:35 - root - INFO - Size of the PNG file: 0.73 MB\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:23:35 - root - INFO - PNG File shape: (484, 779)\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:23:35 - root - INFO - File size of the converted webp format: 0.04 MB\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:23:35 - root - INFO - WEBP File shape: (500, 500)\u001b[0m\n",
-      "\u001b[32m2023-11-22 22:23:35 - root - INFO - Find the converted file here: data/processed/Sentinel2_visual_processed.webp\u001b[0m\n"
+      "\u001b[32m2023-11-23 11:32:45 - root - INFO - PNG file has been saved here:data/processed/Sentinel2_visual_processed.png\u001b[0m\n",
+      "\u001b[32m2023-11-23 11:32:45 - root - INFO - Size of the PNG file: 0.73 MB\u001b[0m\n",
+      "\u001b[32m2023-11-23 11:32:45 - root - INFO - PNG File shape: (484, 779)\u001b[0m\n",
+      "\u001b[32m2023-11-23 11:32:45 - root - INFO - File size of the converted webp format: 0.04 MB\u001b[0m\n",
+      "\u001b[32m2023-11-23 11:32:45 - root - INFO - WEBP File shape: (500, 500)\u001b[0m\n",
+      "\u001b[32m2023-11-23 11:32:45 - root - INFO - Find the converted file here: data/processed/Sentinel2_visual_processed.webp\u001b[0m\n"
      ]
     }
    ],
